# genomevedic

./: .env.example  .gitignore  AGENT_8_1_DELIVERABLES.md  AGENT_8_2_FINAL_SUMMARY.md  AGENT_8_2_REPORT.md  AGENT_8_3_REPORT.md  AGENT_9_1_DELIVERABLES_SUMMARY.txt  AGENT_9_1_GALAXY_INTEGRATION_REPORT.md  AGENT_9_2_TERRA_INTEGRATION_REPORT.md  AGENT_9_4_REPORT.md  COLLAB_README.md  DEMO_SCREENPLAY.md  DEPLOYMENT_COMPLETE.md  FINAL_REPORT_AGENT_8_1.md  GENESIS_COMPLETE.md  HANDOFF.md  HANDOFF_GENOMEVEDIC_WAVE8.md  HONEST_ASSESSMENT.md  KNOWN_ISSUES.md  LIVING_SCHEMATIC.md  PERFORMANCE_TUNING.md  PROJECT_COMPLETE.md  QUICK_START_NL_QUERY.md  README.md  RED_TEAM_FINDINGS.md  WAVE1_COMPLETE.md  WAVE2_COMPLETE.md  WAVE3_COMPLETE.md  WAVE4_COMPLETE.md  WAVE5_COMPLETE.md  WAVE6_COMPLETE.md  WAVE7_COMPLETE.md  WAVE_8_12_PLAN.md  WAVE_8_1_COMPLETION_REPORT.md  WAVE_8_3_DELIVERABLES.md  WAVE_8_4_REPORT.md  WAVE_8_COMPLETE.md  WAVE_9_COMPLETE.md  chr22_benchmark.json  docker-compose.yml  (+7 more)
backend/: Dockerfile.collab  go.mod  go.sum
backend/scripts/: download_datasets.sh  fasta_to_particles.py  gtf_to_annotations.py  validate_datasets.py  vcf_to_variants.py
backend/testdata/: cosmic_sample.tsv  genes_sample.gtf
data/: LICENSE.md
data/tier2/: DATASETS.json
docs/: GALAXY_INTEGRATION.md  MATHEMATICAL_FOUNDATIONS.md  METHODOLOGY.md  PERSONA.md  SKILLS.md  TERRA_INTEGRATION.md  VISION.md  WAVE_PLAN.md
engines/: advanced_algorithms.go  orthogonal_vectors.go  persistent_data.go  quaternion.go  vedic.go  williams_optimizer.go
frontend/: index.html  package.json  vite.config.js
integrations/terra/: INSTALL.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.txt  PYPI_CHECKLIST.md  QUICKSTART.md  README.md  TESTING.md  pyproject.toml  requirements-full.txt  requirements.txt  setup.py
integrations/terra/examples/: terra_quickstart.ipynb
integrations/terra/genomevedic_python/: __init__.py  api_client.py  gcs_client.py  jupyter_widget.py
tests/: simple_ws_test.sh
(+155 files in other folders)
