[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "genomevedic"
dynamic = ["version"]
description = "Interactive genome visualization for Jupyter notebooks and Terra.bio"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GenomeVedic Team", email = "contact@genomevedic.io"}
]
keywords = ["genomics", "bioinformatics", "visualization", "jupyter", "terra"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "requests>=2.28.0",
    "ipywidgets>=8.0.0",
    "IPython>=7.0.0",
]

[project.optional-dependencies]
full = [
    "google-cloud-storage>=2.10.0",
    "pysam>=0.21.0",
]
terra = [
    "google-cloud-storage>=2.10.0",
    "pysam>=0.21.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/genomevedic/genomevedic-python"
Documentation = "https://genomevedic.readthedocs.io"
Repository = "https://github.com/genomevedic/genomevedic-python"
Issues = "https://github.com/genomevedic/genomevedic-python/issues"

[tool.setuptools.dynamic]
version = {attr = "genomevedic_python.__version__"}

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=genomevedic_python --cov-report=html --cov-report=term"
